<resources>
    <string name="app_name">FOSS Image Editor</string>

    // Menu

    <string name="action_about">About</string>
    <string name="action_about_license">License</string>
    <string name="action_about_contribute">Contribute</string>
    <string name="action_about_help">Help</string>
    <string name="action_adjust">Adjust</string>
    <string name="action_filter">Filter</string>
    <string name="action_crop">Crop</string>
    <string name="action_art">Artwork</string>
    <string name="action_overwrite">Overwrite original</string>
    <string name="action_share">Share</string>
    <string name="action_text">Add text</string>
    <string name="action_save">Save</string>
    <string name="action_pick">Pick image</string>

    // Filter

    <string name="filter_saturation">Saturation</string>
    <string name="filter_exposure">Exposure</string>
    <string name="filter_contrast">Contrast</string>
    <string name="filter_white">White balance</string>
    <string name="filter_hue">HUE</string>
    <string name="filter_gamma">Gamma</string>
    <string name="filter_colorBalance">Color Balance</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_monochrome">Monochrome</string>
    <string name="filter_rgb">RGB</string>
    <string name="filter_haze">Haze</string>
    <string name="filter_vignette">Vignette</string>
    <string name="filter_blur">Blur</string>
    <string name="filter_sharpen">Sharpen</string>
    <string name="filter_toon">Cartoon</string>
    <string name="filter_cross">Crosshatch</string>
    <string name="filter_poster">Poster</string>
    <string name="filter_suppress">Suppress non maximum</string>
    <string name="filter_weakPixel">Weak pixel inclusion</string>
    <string name="filter_halftone">Halftone</string>
    <string name="filter_invert">Invert</string>
    <string name="filter_pixelation">Pixel</string>

    // Crop

    <string name="crop_free">Free</string>
    <string name="crop_11">1:1</string>
    <string name="crop_43">4:3</string>
    <string name="crop_169">16:9</string>
    <string name="crop_34">3:4</string>
    <string name="crop_916">9:16</string>

    // Dialog

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_share">Share using:</string>
    <string name="dialog_load">Please pick an image first.</string>
    <string name="dialog_wait">Please wait a moment.</string>

    <string name="dialog_save">This will overwrite the original image and delete the edited image.
        This will cause a loose of quality. Proceed?</string>
    <string name="dialog_save_ok">Image saved.</string>
    <string name="dialog_save_not">Could not save image.</string>
    <string name="dialog_load_not">Could not load image.</string>
    <string name="dialog_text_hint">Enter your text:</string>

    <string name="dialog_permission">\"FOSS Image Editor\" needs the permission to \"read and write on your storage\". This
        is needed to save the edited images on you SD card. Please grant the permission on the following dialog.</string>

    <string name="dialog_permission_not">As said: the permission is needed. The app will not work.</string>

    // About dialogs

    <string name="about_license_title">Copyright © 2018 by Gaukler Faun</string>
    <string name="about_license_dialog">
        &lt;i>For more information visit the project site on Github: https://github.com/scoute-dich/FOSSImageEditor&lt;/i>&lt;br>&lt;br>

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see http://www.gnu.org/licenses.&lt;br>&lt;br>

        &lt;i>Following open source libraries or projects are used within this software:&lt;/i>&lt;br>&lt;br>

        &lt;b>Android Image Cropper&lt;/b>&lt;br>
        Apache License Version 2.0&lt;br>
        ArthurHub&lt;br>
        &lt;i>https://github.com/ArthurHub/Android-Image-Cropper&lt;/i>&lt;br>&lt;br>

        &lt;b>GpuImage for Android&lt;/b>&lt;br>
        Apache License Version 2.0&lt;br>
        CyberAgent&lt;br>
        &lt;i>https://github.com/CyberAgent/android-gpuimage&lt;/i>&lt;br>&lt;br>

        &lt;b>Material Design Icons&lt;/b>&lt;br>
        SIL Open Font License, Version 1.1.&lt;br>
        Templarian&lt;br>
        &lt;i>https://github.com/Templarian/MaterialDesign&lt;/i>&lt;br>&lt;br>

        &lt;b>Text on image&lt;/b>&lt;br>
        Apache License Version 2.0&lt;br>
        SarthakDoshi04&lt;br>
        &lt;i>https://github.com/SarthakDoshi04/text-on-image&lt;/i>&lt;br>&lt;br>

        &lt;b>Farbenkreis zur Symbolisierung des menschlichen Geistes- und Seelenlebens&lt;/b>&lt;br>
        Public Domain&lt;br>
        Original uploader was the user Luestling on Wikipedia in German - Transferred from de.wikipedia
        to Commons by Andrei Stroe using the CommonsHelper.&lt;br>
        &lt;i>https://commons.wikimedia.org/w/index.php?curid=6011583&lt;/i>

    </string>

    <string name="about_cont_dialog">
        &lt;i>First I would like to thank all people who contributed in any way on this project. They submitted issues,
        translated or helped in any other way. On following sites you can become a active member of this
        great community:&lt;/i>&lt;br>&lt;br>

        &lt;b>XDA-thread:&lt;/b>&lt;br>
        XDA is a great community for developers and smartphone enthusiasts. Here you can report issues, ask for new features
        and everything other related to \"FOSS Image Editor\".&lt;br>
        &lt;i>https://forum.xda-developers.com/android/apps-games/app-browser-t3500091&lt;/i>&lt;br>&lt;br>

        &lt;b>Github:&lt;/b>&lt;br>
        On Github you can see the source code of \"FOSS Image Editor\". This is the more technical solution: open issues, ask for new
        features or even help developing or translating.&lt;br>
        &lt;i>https://github.com/scoute-dich/FOSSImageEditor&lt;/i>&lt;br>&lt;br>&lt;br>

        &lt;i>Following people contributed at this project. If I have forgotten anybody, please contact me:&lt;/i>&lt;br>&lt;br>

        &lt;b>Gaukler Faun&lt;/b>&lt;br>
        \u25AA Main developer and initiator of this project&lt;br>
        &lt;i>https://github.com/scoute-dich&lt;/i>
    </string>

    <string name="about_help_dialog">
        &lt;b>Loading images&lt;/b>&lt;br>
        \u25AA Using the menu \"Pick image\" will launch your Gallery, where you can pick an image.&lt;br>
        \u25AA You can share pictures from any app to \"FOSS Image Editor\".&lt;br>
        \u25AA \"FOSS Image Editor\" can also be launched as default image editor from other apps.&lt;br>&lt;br>

        &lt;b>Saving images&lt;/b>&lt;br>
        \u25AA Every time you made a change to your image you have to save by pressing the \"Check button\". All images will be
        stored in the \"FOSS_ImageEditor\" directory inside your default \"Pictures\" folder.&lt;br>
        \u25AA You can overwrite the original image. This will also delete the image inside the \"FOSS_ImageEditor\"
        directory.&lt;br>&lt;br>

        &lt;b>Add text&lt;/b>&lt;br>
        Enter text and press the \"OK\" button. On the next screen you can resize and rotate the text with two finger
        gestures or change the color. When finished press the \"SET\" button.
    </string>

</resources>
