<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.aosd.fossimageeditor.MainActivity"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_adjust"
        android:icon="@drawable/action_adjust"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_crop"
        android:title="@string/action_crop"
        android:icon="@drawable/action_crop"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_text"
        android:title="@string/action_text"
        android:icon="@drawable/action_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/action_check"
        app:showAsAction="always" />

    <item
        android:title="@string/action_about" >
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/action_about_license"
                android:title="@string/action_about_license" />
            <item
                android:id="@+id/action_about_contribute"
                android:title="@string/action_about_contribute" />
            <item
                android:id="@+id/action_about_help"
                android:title="@string/action_about_help" />
        </menu>
    </item>

    <item
        android:id="@+id/action_pick"
        android:title="@string/action_pick"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_overwrite"
        android:title="@string/action_overwrite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

</menu>
