<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:minHeight="56dp"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:layout_alignParentBottom="true"
    tools:ignore="Overdraw">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <EditText
            android:id="@+id/dialog_edit"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/dialog_text_hint"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/dialog_ok"/>

        <Button android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/action_ok"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:text="@string/dialog_cancel"/>

    </RelativeLayout>

</LinearLayout>