<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:ignore="ContentDescription">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/action_crop"
        android:textColor="@color/colorAccent"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <HorizontalScrollView
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <LinearLayout
                android:id="@+id/crop_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="0dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardUseCompatPadding="true"
                    app:elevation="0dp" >

                    <ImageView
                        android:background="@color/color_shadow"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/crop_free" />

                    <TextView
                        android:text="@string/crop_free"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/color_light"
                        android:background="@color/color_shadow"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardUseCompatPadding="true"
                    app:elevation="0dp" >

                    <ImageView
                        android:background="@color/color_shadow"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/crop_11" />

                    <TextView
                        android:text="@string/crop_11"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/color_light"
                        android:background="@color/color_shadow"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardUseCompatPadding="true"
                    app:elevation="0dp" >

                    <ImageView
                        android:background="@color/color_shadow"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/crop_43" />

                    <TextView
                        android:text="@string/crop_43"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/color_light"
                        android:background="@color/color_shadow"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_169"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardUseCompatPadding="true"
                    app:elevation="0dp" >

                    <ImageView
                        android:background="@color/color_shadow"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/crop_169" />

                    <TextView
                        android:text="@string/crop_169"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/color_light"
                        android:background="@color/color_shadow"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardUseCompatPadding="true"
                    app:elevation="0dp" >

                    <ImageView
                        android:background="@color/color_shadow"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/crop_34" />

                    <TextView
                        android:text="@string/crop_34"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/color_light"
                        android:background="@color/color_shadow"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_916"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="0dp"
                android:paddingStart="2dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardUseCompatPadding="true"
                    app:elevation="0dp" >

                    <ImageView
                        android:background="@color/color_shadow"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:src="@drawable/crop_916" />

                    <TextView
                        android:text="@string/crop_916"
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="center"
                        android:textColor="@color/color_light"
                        android:background="@color/color_shadow"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>


